# qwik-tern

./: .tern.ini  Makefile  README.md  changes.json  main.py  pyproject.toml  requirement.txt
.github/workflows/: status-check.yml
changelogs/: master.xml  qwik_tern_master.json
qwik_tern/: __init__.py  connection.py  constants.py  database_utility.py  logger.py  main.py  migration.py  qwik_tern.py  thread_local.py
qwik_tern/config/: config_global.py
qwik_tern/constants/: constants.py
qwik_tern/logger/: logger.py
qwik_tern/models/: changelog_model.py  db_config_model.py  global_config_model.py
qwik_tern/parser/: parse_changes.py  parse_file.py  parse_json.py
qwik_tern/sql/handlers/: changelog_handler.py  command_handler.py
qwik_tern/sql/helpers/: create_table_helper.py  mysql_helper.py
qwik_tern/utilities/: test_connection.py
qwik_tern/validator/: sql_validator.py
readme/: contributor-guidelines.md
sql/handlers/: command_handler.py
sql/helpers/: create_table_helper.py
tern/: __init__.py
tern/utilities/: migration.py
test/: test_connection.py
tests/: test_connection.py
utilities/: connection.py  migration.py
